lots of misc fixes and upgrades
you should commit more often.

--- a/status-board/Base.lproj/Main.storyboard
+++ b/status-board/Base.lproj/Main.storyboard
@@ -129,12 +129,15 @@
                                         </view>
                                         <constraints>
                                             <constraint firstItem="Xtd-df-Jba" firstAttribute="centerY" secondItem="ldI-62-0Mt" secondAttribute="centerY" id="7Co-Ji-VXS"/>
+                                            <constraint firstItem="0pO-iJ-1QM" firstAttribute="leading" relation="lessThanOrEqual" secondItem="4hg-8R-cRm" secondAttribute="trailing" constant="284" id="Lzg-fB-wcN"/>
                                             <constraint firstItem="4hg-8R-cRm" firstAttribute="leading" secondItem="7D8-1p-crL" secondAttribute="trailing" constant="20" id="PYp-6B-KjK"/>
                                             <constraint firstItem="0pO-iJ-1QM" firstAttribute="centerY" secondItem="ldI-62-0Mt" secondAttribute="centerY" id="UGt-xv-gzo"/>
                                             <constraint firstAttribute="bottom" secondItem="AWO-iU-4gd" secondAttribute="bottom" constant="20" id="bLU-Yw-7Oz"/>
+                                            <constraint firstItem="0pO-iJ-1QM" firstAttribute="leading" relation="lessThanOrEqual" secondItem="Xtd-df-Jba" secondAttribute="trailing" constant="305" id="esp-5h-4yC"/>
                                             <constraint firstItem="Xtd-df-Jba" firstAttribute="leading" secondItem="7D8-1p-crL" secondAttribute="trailing" constant="20" id="fTZ-Tf-PHo"/>
                                             <constraint firstItem="7D8-1p-crL" firstAttribute="leading" secondItem="ldI-62-0Mt" secondAttribute="leading" id="fa8-kJ-Znu"/>
                                             <constraint firstAttribute="trailing" secondItem="0pO-iJ-1QM" secondAttribute="trailing" constant="56" id="hhC-P6-xfX"/>
+                                            <constraint firstItem="0pO-iJ-1QM" firstAttribute="leading" relation="lessThanOrEqual" secondItem="AWO-iU-4gd" secondAttribute="trailing" constant="248" id="piH-jv-esW"/>
                                             <constraint firstItem="4hg-8R-cRm" firstAttribute="top" secondItem="ldI-62-0Mt" secondAttribute="top" constant="20" id="rRi-jR-4hy"/>
                                             <constraint firstItem="AWO-iU-4gd" firstAttribute="leading" secondItem="7D8-1p-crL" secondAttribute="trailing" constant="20" id="sKk-lg-m9W"/>
                                             <constraint firstItem="7D8-1p-crL" firstAttribute="centerY" secondItem="ldI-62-0Mt" secondAttribute="centerY" id="zDU-Pf-kI6"/>
@@ -234,7 +237,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="40" sectionFooterHeight="40" translatesAutoresizingMaskIntoConstraints="NO" id="uwA-TR-5se">
-                                <rect key="frame" x="0.0" y="145" width="540" height="315"/>
+                                <rect key="frame" x="0.0" y="0.0" width="540" height="520"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" textLabel="eNx-8B-YvN" detailTextLabel="evp-QA-jof" style="IBUITableViewCellStyleSubtitle" id="oAN-ic-JBD">
@@ -271,8 +274,8 @@
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="uwA-TR-5se" secondAttribute="trailing" id="3jO-Yb-sYV"/>
                             <constraint firstItem="uwA-TR-5se" firstAttribute="leading" secondItem="MI7-jq-sCG" secondAttribute="leading" id="5wS-mZ-aTg"/>
-                            <constraint firstItem="uwA-TR-5se" firstAttribute="top" secondItem="7DT-J7-7mR" secondAttribute="bottom" id="doK-fC-47B"/>
-                            <constraint firstItem="7E7-ob-QZG" firstAttribute="top" secondItem="uwA-TR-5se" secondAttribute="bottom" id="gRl-um-9zh"/>
+                            <constraint firstItem="uwA-TR-5se" firstAttribute="top" secondItem="MI7-jq-sCG" secondAttribute="top" id="doK-fC-47B"/>
+                            <constraint firstAttribute="bottom" secondItem="uwA-TR-5se" secondAttribute="bottom" id="gRl-um-9zh"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="KcL-9K-1y4"/>
                     </view>
@@ -299,10 +302,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="40" sectionFooterHeight="40" translatesAutoresizingMaskIntoConstraints="NO" id="9hD-AI-D1l">
-                                <rect key="frame" x="0.0" y="145" width="540" height="315"/>
+                                <rect key="frame" x="0.0" y="0.0" width="540" height="520"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" textLabel="9zY-Yo-okM" detailTextLabel="fMX-iU-K3L" style="IBUITableViewCellStyleSubtitle" id="lF0-XW-6n8">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" textLabel="9zY-Yo-okM" detailTextLabel="7NK-yU-1iB" style="IBUITableViewCellStyleSubtitle" id="lF0-XW-6n8">
                                         <rect key="frame" x="0.0" y="40" width="540" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="lF0-XW-6n8" id="NRU-tX-IEq">
@@ -316,9 +319,9 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="fMX-iU-K3L">
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="7NK-yU-1iB">
                                                     <rect key="frame" x="20" y="50" width="128" height="46"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="38"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -334,9 +337,9 @@
                             </tableView>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="9hD-AI-D1l" firstAttribute="top" secondItem="bMj-fV-R0P" secondAttribute="bottom" id="AtV-6H-yj1"/>
+                            <constraint firstItem="9hD-AI-D1l" firstAttribute="top" secondItem="ywQ-y6-7In" secondAttribute="top" id="AtV-6H-yj1"/>
                             <constraint firstAttribute="trailing" secondItem="9hD-AI-D1l" secondAttribute="trailing" id="Ito-Cm-IQw"/>
-                            <constraint firstItem="YL4-fC-Y87" firstAttribute="top" secondItem="9hD-AI-D1l" secondAttribute="bottom" id="KPo-fI-4fy"/>
+                            <constraint firstAttribute="bottom" secondItem="9hD-AI-D1l" secondAttribute="bottom" id="KPo-fI-4fy"/>
                             <constraint firstItem="9hD-AI-D1l" firstAttribute="leading" secondItem="ywQ-y6-7In" secondAttribute="leading" id="jCL-6z-2zr"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="rTQ-UK-azH"/>
